Closed Bug 1425877 Opened 6 years ago Closed 6 years ago

Non-unified build fails for nsLocalFileCommon.cpp

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: philn, Assigned: philn)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.89 Safari/537.36

Steps to reproduce:

While building this file within gecko-media I get the following error:

nsLocalFileCommon.cpp:185:3: error: invalid use of incomplete type ‘class nsTArray<char16_t*>’
   aNodeArray.AppendElement(aPath);
   ^~~~~~~~~~

nsArray.h should be included in this compilation unit.
Blocks: servo-media
Attachment #8937475 - Flags: review?(cpearce) → review+
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6746fa378837
Non-unified build fixes for xpcom/io/nsLocalFileCommon.cpp r=cpearce
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/6746fa378837
Status: UNCONFIRMED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Assignee: nobody → philn
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: