Bug 1425877 - Non-unified build fixes for xpcom/io/nsLocalFileCommon.cpp r=cpearce nsArray was used within the compilation unit without prior include.